--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@nomiclabs/hardhat-waffle": "^2.0.6",
-    "@openzeppelin/contracts": "=4.9.3",
-    "@openzeppelin/contracts-upgradeable": "=4.9.3",
+    "@openzeppelin/contracts": "3.4.2-solc-0.7",
+    "@uniswap/v2-core": "^1.0.1",
+    "@uniswap/lib": "^4.0.1-alpha",
+    "base64-sol": "1.0.1",
     "hardhat": "2.20.0"
   },
   "devDependencies": {
